<resources>
    <string name="register_url" translatable="false">http://94.158.152.83:5000/register</string>

    <string name="app_name" translatable="false">Zorgo</string>
    <string name="phone_number">Phone</string>
    <string name="email" translatable="false">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="pass">Password</string>
    <string name="pass_confirm">Confirm password</string>

    <string name="registration_label">Registration</string>
    <string name="register_label">Register</string>

    <string name="phone_hint">mobile phone</string>

    <string name="second_name_Hint">Doe</string>
    <string name="first_name_Hint">Joe</string>

    <string name="email_Hint" translatable="false">exampleyour@mail.com</string>

    <string name="log_or_reg">Or</string>
    <string name="logIn">Login</string>

    <string name="login_Btn">Login</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="title_activity_main_screen" translatable="false">MainScreen</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="user_location_title">your location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="address_to_hint">Where you go ?</string>
    <string name="address_from_hint">Where are you going from ?</string>
    <string name="Rating">Rating</string>
    <string name="Enter_code">Enter the code</string>
    <string name="Code_was_sended">E-mail code was sended on</string>
    <string name="title_activity_menu" translatable="false">MenuActivity</string>
    <string name="settings_messages_label">Messages</string>
    <string name="settings_history_label">History</string>
    <string name="settings_payment_label">Payment</string>
    <string name="settings_saved_label">Saved</string>
    <string name="settings_setting_label">Settings</string>
    <string name="settings_help_label">Help</string>
    <string name="settings_info_label">About us</string>
    <string name="email_err_toast_text">Email must look like : example@mail.com</string>
    <string name="pass_err_toast_text">"Password must :\nbe no shorter than 6 characters\nhave 1 character, 1  big letter, 1 little letter, 1 number\nuse only latina letters, numbers and characters "</string>
    <string name="phone_err_toast_text">Phone number must be writen like : +380 501 234 5678 , 3805012345678, +(380)-501-234-5678</string>
    <string name="name_err_toast_text">The name should be at least 2 letters</string>
    <string name="pass_identical_err_text">Passwords is not equal</string>
    <string name="distance_between">Distance</string>
    <string name="user_marker_title">Your location</string>
    <string name="make_order_button_text">Order</string>
    <string name="driver_on_the_way_toast_text">"Your driver on the way\nWait for arrival notification "</string>
    <string name="driver_arrived_note_text">Your driver arrived</string>
    <string name="Start_trip_btn_text">Start trip ?</string>
</resources>