<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_gradient"
    tools:context=".LoginOrRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/chooseLogin"
            android:layout_width="314dp"
            android:layout_height="48dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_confirm"
            android:maxWidth="313dip"
            android:minHeight="48dip"
            android:padding="0dp"
            android:text="@string/logIn"
            android:textAlignment="center"
            android:textSize="24sp"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/login_or_regist_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_or_reg"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/chooseRegister"
            android:layout_width="314dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_confirm"
            android:padding="0dp"
            android:text="@string/register_label"
            android:textAlignment="center"
            android:textSize="24sp"
            app:backgroundTint="@null">

        </Button>

        <Button
            android:id="@+id/goMap"
            android:layout_width="314dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_confirm"
            android:padding="0dp"
            android:text="G map"
            android:textAlignment="center"
            android:textSize="24sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>