<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fontFamily="@font/robotoregularobotoregular"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Registration -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginBottom="70dp"
            >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/loginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/logIn"
                    android:textColor="@color/white"
                    android:textSize="50dp" />

            </TableRow>


        </TableLayout>

        <!-- Phone -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <!--Label -->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/phoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/labelTextColor"
                    android:textSize="14dp" />

            </TableRow>

            <!-- Form -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_background"
                    android:ems="12"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/labelHintColor"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>

        <!-- Email -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/passLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pass"
                    android:textColor="@color/labelTextColor"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_background"
                    android:ems="12"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/labelHintColor"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>

        <!-- register button -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_confirm"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/login_Btn"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:backgroundTint="@null">

                </Button>
            </TableRow>
        </TableLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>